--- a/final.ipynb
+++ b/final.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NEEDS TO BE COMMENTED\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "from fpdf import FPDF\n",
     "title = ''\n",
     "class PDF(FPDF):\n",
